fix alert gap issue

--- a/openmetadata-ui/src/main/resources/ui/src/components/AlertBar/alert-bar.style.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/AlertBar/alert-bar.style.less
@@ -74,6 +74,7 @@
     display: flex;
     align-items: center;
     border-radius: 12px;
+    margin-bottom: 12px;
   }
 
   &.hide-alert {
